add,delete function create

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./images/icon.png" type="image/png">
-
-    
     <script src="main.js" defer></script>
     <title >List One</title>
 </head>
@@ -16,13 +14,13 @@
         <h2>Todo-LIst <img src="./images/icon.png" alt=""></h2>
         <div class="row">
             <input type="text" name="usertext" id="input-box" placeholder="enter your note">
-            <button>Add</button>
+            <button id="add-button">Add</button>
         </div>
-        <!-- <ul id="list-container">
-            <li class="list-item">task1</li>
+        <ul id="list-container">
+            <!-- <li class="list-item">task1</li>
             <li >task2</li>
-            <li >task3</li>
-        </ul> -->
+            <li >task3</li> -->
+        </ul>
     </div>
 
 
